1999-03-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* XActivity.m (Activity_c): Add phase tags.

	* XActivity.h (Activity_c): Implement Activity protocol.

	* ActionGroup.[hm] ([GroupPermutedIndex_c +createBegin:],
	[GroupPermutedIndex_c -setCollection:], 
	[GroupPermutedIndex_c -createEnd]): Remove.
	([GroupPermutedIndex_c -setActivity:]): New setter.
	([ActionGroup_c -_createPermutedIndex_:activity:]): Add activity:
	argument, which sets activity slot in index. Use previous method.

	* CompoundAction.m ([CompoundAction_c -_createActivity_:::]): 
	Use previous method.

1999-03-04  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* ActionGroup.m (GroupPermutedIndex_c, ForEachIndex_c): Add phase tags.
	([GroupPermutedIndex_c +createBegin:]): Revert last change.

1999-03-04  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* ActionGroup.m ([GroupPermutedIndex_c +createBegin:]):
	Call allocIVars: with [self getClass] as an arguments instead of 
	self and setClass to self.

1999-03-03  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* ActionGroup.m ([GroupPermutedIndex_c +createBegin:]): Use getCZone
	instead of getComponentZone: method.
	([GroupPermutedIndex_c -createEnd]): Likewise.
	
1999-03-02  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* ActionGroup.m ([GroupPermutedIndex_c +createBegin:]): Use 
	allocIVars: instead of call to [cuper createBegin:].
	([GroupPermutedIndex_c -createEnd]): Call [collection createEnd]
	instead of [super createEnd].
	([GroupPermutedIndex_c -createEnd]): Call setMappedAlloc on self.

1999-02-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (CURRENT, AGE): Increment.  Version 1.4.1.

1999-02-06  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* CompoundAction.m (setDefaultOrder): Add setDefaultOrder function.

	* CompoundAction.h: Add setDefaultOrder function.

	* Action.m ([ActionForEach_1 -setDefaultOrder:]): Use 
	setDefaultOrder function. 
	
	* Action.m ([ActionForEach_1 -setDefaultOrder:]): Likewise.
